[gd_scene load_steps=11 format=2]

[ext_resource path="res://Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://On_Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tabletop.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://computer_class.gd" type="Script" id=6]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1026, 320, 1083, 320, 1080, 382, 1026, 384, 130, 192, 131, 134, 189, 136, 189, 768, 258, 768, 258, 704, 322, 704, 322, 768, 386, 768, 386, 704, 450, 704, 450, 768, 442, 824, 514, 768, 514, 704, 578, 704, 578, 768, 642, 768, 642, 704, 706, 704, 706, 768, 770, 768, 770, 704, 834, 704, 834, 768, 906, 72, 1146, 72, 1146, 248, 1090, 248, 1026, 256, 906, 768, 1026, 448, 1026, 832, 1146, 840, 1146, 1016, 906, 1016, 906, 952, 762, 952, 762, 1016, 714, 1016, 714, 824, 442, 904, 578, 904, 578, 960, 74, 1016, 634, 960, 634, 1016, 74, 192, 1081, 450, 1080, 509, 1026, 512, 1026, 576, 1026, 704, 1083, 707, 1083, 766, 1026, 768, 1085, 584, 1083, 634, 1026, 640 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15, 16 ), PoolIntArray( 17, 18, 19, 20 ), PoolIntArray( 21, 22, 23, 24 ), PoolIntArray( 25, 26, 27, 28 ), PoolIntArray( 29, 30, 31, 32 ), PoolIntArray( 29, 32, 33 ), PoolIntArray( 34, 29, 33, 0 ), PoolIntArray( 34, 0, 3 ), PoolIntArray( 34, 3, 35 ), PoolIntArray( 36, 37, 38, 39, 40 ), PoolIntArray( 41, 42, 43, 44 ), PoolIntArray( 45, 46, 47, 48 ), PoolIntArray( 47, 49, 50, 48 ), PoolIntArray( 48, 51, 4, 7 ), PoolIntArray( 45, 48, 7, 8 ), PoolIntArray( 45, 8, 11, 16 ), PoolIntArray( 16, 11, 12 ), PoolIntArray( 44, 16, 15, 17 ), PoolIntArray( 44, 17, 20 ), PoolIntArray( 44, 20, 21 ), PoolIntArray( 44, 21, 24 ), PoolIntArray( 44, 24, 25 ), PoolIntArray( 35, 52, 53, 54 ), PoolIntArray( 34, 35, 54 ), PoolIntArray( 34, 54, 55 ), PoolIntArray( 56, 57, 58, 59, 34 ), PoolIntArray( 55, 60, 61, 62 ), PoolIntArray( 34, 55, 62 ), PoolIntArray( 34, 62, 56 ), PoolIntArray( 34, 59, 36, 40 ), PoolIntArray( 28, 34, 40, 41, 44 ), PoolIntArray( 44, 25, 28 ) ]
outlines = [ PoolVector2Array( 189, 136, 131, 134, 130, 192, 74, 192, 74, 1016, 634, 1016, 634, 960, 578, 960, 578, 904, 442, 904, 442, 824, 714, 824, 714, 1016, 762, 1016, 762, 952, 906, 952, 906, 1016, 1146, 1016, 1146, 840, 1026, 832, 1026, 768, 1083, 766, 1083, 707, 1026, 704, 1026, 640, 1083, 634, 1085, 584, 1026, 576, 1026, 512, 1080, 509, 1081, 450, 1026, 448, 1026, 384, 1080, 382, 1083, 320, 1026, 320, 1026, 256, 1090, 248, 1146, 248, 1146, 72, 906, 72, 906, 768, 834, 768, 834, 704, 770, 704, 770, 768, 706, 768, 706, 704, 642, 704, 642, 768, 578, 768, 578, 704, 514, 704, 514, 768, 450, 768, 450, 704, 386, 704, 386, 768, 322, 768, 322, 704, 258, 704, 258, 768, 189, 768 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 386, 576, 386, 519, 448, 521, 450, 576, 770, 576, 771, 519, 833, 521, 834, 576, 189, 632, 189, 576, 258, 576, 906, 632, 906, 576, 514, 576, 515, 519, 576, 520, 578, 576, 259, 519, 320, 519, 322, 576, 642, 576, 643, 520, 703, 518, 706, 576 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 7, 12, 11 ), PoolIntArray( 13, 14, 15, 16 ), PoolIntArray( 10, 17, 18, 19 ), PoolIntArray( 11, 10, 19 ), PoolIntArray( 11, 19, 0 ), PoolIntArray( 11, 0, 3 ), PoolIntArray( 11, 3, 13 ), PoolIntArray( 11, 13, 16 ), PoolIntArray( 11, 16, 20 ), PoolIntArray( 21, 22, 23, 20 ), PoolIntArray( 11, 20, 23 ), PoolIntArray( 11, 23, 4 ), PoolIntArray( 11, 4, 7 ) ]
outlines = [ PoolVector2Array( 189, 632, 906, 632, 906, 576, 834, 576, 833, 521, 771, 519, 770, 576, 706, 576, 703, 518, 643, 520, 642, 576, 578, 576, 576, 520, 515, 519, 514, 576, 450, 576, 448, 521, 386, 519, 386, 576, 322, 576, 320, 519, 259, 519, 258, 576, 189, 576 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 258, 320, 322, 320, 322, 384, 256, 383, 386, 384, 386, 320, 450, 320, 450, 384, 514, 384, 514, 320, 578, 320, 578, 384, 642, 384, 642, 320, 706, 320, 706, 384, 770, 384, 770, 320, 834, 320, 834, 384, 906, 384, 906, 440, 189, 440, 189, 384 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 16, 17, 18, 19 ), PoolIntArray( 19, 20, 21, 22 ), PoolIntArray( 16, 19, 22 ), PoolIntArray( 15, 16, 22 ), PoolIntArray( 12, 15, 22 ), PoolIntArray( 11, 12, 22 ), PoolIntArray( 8, 11, 22 ), PoolIntArray( 7, 8, 22 ), PoolIntArray( 4, 7, 22 ), PoolIntArray( 2, 4, 22 ), PoolIntArray( 3, 2, 22, 23 ) ]
outlines = [ PoolVector2Array( 189, 440, 906, 440, 906, 384, 834, 384, 834, 320, 770, 320, 770, 384, 706, 384, 706, 320, 642, 320, 642, 384, 578, 384, 578, 320, 514, 320, 514, 384, 450, 384, 450, 320, 386, 320, 386, 384, 322, 384, 322, 320, 258, 320, 256, 383, 189, 384 ) ]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 387, 136, 451, 134, 450, 192, 386, 192, 258, 192, 258, 133, 322, 134, 322, 192, 906, 192, 906, 256, 189, 252, 834, 192, 189, 192, 514, 192, 516, 133, 578, 135, 578, 192, 645, 135, 705, 135, 706, 192, 642, 192, 770, 192, 774, 133, 835, 136 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 10, 12, 4 ), PoolIntArray( 13, 14, 15, 16 ), PoolIntArray( 17, 18, 19, 20 ), PoolIntArray( 21, 22, 23, 11 ), PoolIntArray( 21, 11, 10 ), PoolIntArray( 19, 21, 10 ), PoolIntArray( 20, 19, 10 ), PoolIntArray( 16, 20, 10 ), PoolIntArray( 13, 16, 10 ), PoolIntArray( 2, 13, 10 ), PoolIntArray( 3, 2, 10 ), PoolIntArray( 7, 3, 10 ), PoolIntArray( 7, 10, 4 ) ]
outlines = [ PoolVector2Array( 906, 192, 906, 256, 189, 252, 189, 192, 258, 192, 258, 133, 322, 134, 322, 192, 386, 192, 387, 136, 451, 134, 450, 192, 514, 192, 516, 133, 578, 135, 578, 192, 642, 192, 645, 135, 705, 135, 706, 192, 770, 192, 774, 133, 835, 136, 834, 192 ) ]

[node name="computer_class" type="Node2D"]
script = ExtResource( 6 )

[node name="On_Floor" parent="." instance=ExtResource( 2 )]
position = Vector2( -64, 128 )
z_index = 1
tile_data = PoolIntArray( -131068, 1610612759, 0, -131067, 1610612759, 0, -131064, 1610612759, 0, -131063, 1610612759, 0, -131060, 1610612759, 0, -131059, 1610612759, 0, -65534, 22, 0, -65533, 23, 0, -65532, 23, 0, -65531, 23, 0, -65530, 23, 0, -65529, 23, 0, -65528, 23, 0, -65527, 23, 0, -65526, 23, 0, -65525, 23, 0, -65524, 23, 0, -65523, 23, 0, -65522, 1610612758, 0, 2, 6, 0, 4, 6, 0, 6, 6, 0, 8, 6, 0, 10, 6, 0, 12, 6, 0, 14, 6, 0, 131076, 22, 0, 131077, 23, 0, 131078, 23, 0, 131079, 23, 0, 131080, 23, 0, 131081, 23, 0, 131082, 23, 0, 131083, 23, 0, 131084, 23, 0, 131085, 23, 0, 131086, 1610612758, 0, 131089, -1610612730, 0, 131090, -1610612714, 0, 196612, 6, 0, 196614, 6, 0, 196616, 6, 0, 196618, 6, 0, 196620, 6, 0, 196622, 6, 0, 196626, -1610612713, 0, 262161, -1610612730, 0, 262162, -1610612713, 0, 327684, 22, 0, 327685, 23, 0, 327686, 23, 0, 327687, 23, 0, 327688, 23, 0, 327689, 23, 0, 327690, 23, 0, 327691, 23, 0, 327692, 23, 0, 327693, 23, 0, 327694, 1610612758, 0, 327698, -1610612713, 0, 393220, 6, 0, 393222, 6, 0, 393224, 6, 0, 393226, 6, 0, 393228, 6, 0, 393230, 6, 0, 393233, -1610612730, 0, 393234, -1610612713, 0, 458770, -1610612713, 0, 524292, 22, 0, 524293, 23, 0, 524294, 23, 0, 524295, 23, 0, 524296, 23, 0, 524297, 23, 0, 524298, 23, 0, 524299, 23, 0, 524300, 23, 0, 524301, 23, 0, 524302, 1610612758, 0, 524305, -1610612730, 0, 524306, -1610612713, 0, 589828, 6, 0, 589830, 6, 0, 589832, 6, 0, 589834, 6, 0, 589836, 6, 0, 589838, 6, 0, 589842, -1610612713, 0, 655377, -1610612730, 0, 655378, -1610612712, 0, 720904, 22, 0, 720905, 23, 0, 720906, 23, 0, 720907, 0, 0, 786442, -1610612728, 0, 786443, -1073741801, 0, 851979, -1073741802, 0, 851981, 1610612760, 0, 851982, 1610612758, 0 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( -64, 128 )
z_index = 0
tile_data = PoolIntArray( -131068, 6, 0, -131067, 6, 0, -131064, 6, 0, -131063, 6, 0, -131060, 6, 0, -131059, 6, 0, -131055, 6, 0, -131054, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, -65522, 6, 0, -65521, 6, 0, -65520, 6, 0, -65519, 6, 0, -65518, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 65554, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 6, 0, 196625, 6, 0, 196626, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 6, 0, 262161, 6, 0, 262162, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 327696, 6, 0, 327697, 6, 0, 327698, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 6, 0, 393233, 6, 0, 393234, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 655361, 6, 0, 655362, 6, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 6, 0, 786437, 6, 0, 786438, 6, 0, 786439, 6, 0, 786440, 6, 0, 786441, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
position = Vector2( -64, 128 )
z_index = 2
tile_data = PoolIntArray( -131071, 1610612816, 0, -131070, 1610612802, 0, -131069, -1610612660, 0, -131068, 1610612868, 0, -131067, 1610612868, 0, -131066, -1073741748, 0, -131065, -1610612660, 0, -131064, 1610612868, 0, -131063, 1610612868, 0, -131062, -1073741748, 0, -131061, -1610612660, 0, -131060, 1610612868, 0, -131059, 132, 0, -131058, -1073741748, 0, -131057, 1610612802, 0, -131056, 69, 0, -131055, 1610612799, 0, -131054, 1610612799, 0, -131053, -1073741755, 0, -65535, 1610612815, 0, -65517, -1610612670, 0, 1, 1610612815, 0, 19, -1610612670, 0, 65537, 1610612815, 0, 65555, -1610612670, 0, 131073, 1610612815, 0, 131091, -1610612670, 0, 196609, 1610612815, 0, 196627, -1610612670, 0, 262145, 1610612815, 0, 262163, -1610612670, 0, 327681, 1610612815, 0, 327699, -1610612670, 0, 393217, 1610612815, 0, 393235, -1610612670, 0, 458753, 1610612815, 0, 458771, -1610612670, 0, 524289, 1610612815, 0, 524307, -1610612670, 0, 589825, 1610612815, 0, 589843, -1610612670, 0, 655361, 1610612815, 0, 655379, -1610612670, 0, 720897, 1610612815, 0, 720915, 1610612812, 0, 786433, 1610612815, 0, 786451, -1073741761, 0, 851969, 1610612815, 0, 851987, -1073741761, 0, 917505, -1610612656, 0, 917506, 66, 0, 917507, 66, 0, 917508, 66, 0, 917509, 66, 0, 917510, 66, 0, 917511, 66, 0, 917512, 66, 0, 917513, 66, 0, 917514, 66, 0, 917515, 66, 0, 917516, 66, 0, 917517, 66, 0, 917518, 66, 0, 917519, 66, 0, 917520, 66, 0, 917521, 66, 0, 917522, 66, 0, 917523, 69, 0 )

[node name="Tabletop" parent="." instance=ExtResource( 4 )]
position = Vector2( -64, 128 )
z_index = 3
tile_data = PoolIntArray( -65534, 1610612736, 0, -65532, 1610612736, 0, -65530, 1610612736, 0, -65528, 1610612736, 0, -65526, 1610612736, 0, -65524, 1610612736, 0, -65522, 1610612736, 0, 131076, 1610612736, 0, 131078, 1610612736, 0, 131080, 1610612736, 0, 131082, 1610612736, 0, 131084, 1610612736, 0, 131086, 1610612736, 0, 131090, -1073741824, 0, 262162, -1073741824, 0, 327684, 1610612736, 0, 327686, 1610612736, 0, 327688, 1610612736, 0, 327690, 1610612736, 0, 327692, 1610612736, 0, 327694, 1610612736, 0, 393234, -1073741824, 0, 524292, 1610612736, 0, 524294, 1610612736, 0, 524296, 1610612736, 0, 524298, 1610612736, 0, 524300, 1610612736, 0, 524302, 1610612736, 0, 524306, -1073741824, 0, 655378, -1073741824, 0, 720907, -1073741822, 0, 851979, -1073741821, 0, 851981, 1610612737, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 1059, 926 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" parent="Player" index="2"]
z_index = 1
limit_left = 2
limit_top = 2
limit_right = 1214
limit_bottom = 1086

[node name="Hotbar" parent="Player/CanvasLayer" index="1"]
items = [ "item", null, false, "item", null, false, "item", null, false, "item", null, false, "item", null, false, "item", null, false, "item", null, false, "item", null, false, "item", null, false ]

[node name="wave_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="spawn_point_1" type="Position2D" parent="."]
position = Vector2( 1083, 102 )

[node name="spawn_point_2" type="Position2D" parent="."]
position = Vector2( 1112, 953 )

[node name="spawn_point_3" type="Position2D" parent="."]
position = Vector2( 126, 974 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
position = Vector2( -2, 0 )
navpoly = SubResource( 1 )

[node name="NavigationPolygonInstance2" type="NavigationPolygonInstance" parent="."]
position = Vector2( -2, 0 )
navpoly = SubResource( 2 )

[node name="NavigationPolygonInstance3" type="NavigationPolygonInstance" parent="."]
position = Vector2( -2, 0 )
navpoly = SubResource( 3 )

[node name="NavigationPolygonInstance4" type="NavigationPolygonInstance" parent="."]
position = Vector2( -2, 0 )
navpoly = SubResource( 4 )

[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]

[editable path="Player"]
